--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@ Each milestone requires that you complete relevant readings and lab work first. 
             <tr>
                 <td>Milestone 1</td>
                 <td>Design web pages to display book data coded in the JSON format</td>
-                <td><a href="/milestone1/M1/M1.html">Milestone 1 link</a></td>
+                <td><a href="M1/M1.html">Milestone 1 link</a></td>
             </tr>
             <tr>
                 <td>Milestone 2</td>
                 <td>Search and get book information from the Google Books web API</td>
-                <td><a href="/milestone1/M2/M2.html">Milestone 2 link</a></td>
+                <td><a href="M2/M2.html">Milestone 2 link</a></td>
             </tr>
             <tr>
                 <td>Milestone 3</td>
                 <td>Complete major operations in the AJAX/AJAJ way</td>
-                <td><a href="/milestone1/M3/M3.html">Milestone 3 link</a></td>
+                <td><a href="M3/M3.html">Milestone 3 link</a></td>
             </tr>
             <tr>
                 <td>Milestone 4</td>
                 <td>Improve the page design with better SPA UI designs</td>
-                <td><a href="/milestone1/M4/M4.html">Milestone 4 link</a></td>
+                <td><a href="M4/M4.html">Milestone 4 link</a></td>
             </tr>
         </tbody>
     </table>
