--- a/M2/M2.html
+++ b/M2/M2.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="M2.css">
-    <title>Milestone 1</title>
+    <title>Milestone 2</title>
 </head>
 <body>
-    <h1>Yeah it works</h1>
+    <div class="container">
+        <input type="text" id="searchInput" placeholder="Search for books">
+        <button id="searchButton">Search</button>
+        <button id="clear-button">Clear</button>
+        <button id="bookshelf-button">Bookshelf</button>
+        <button id="home-button">Home</button>
+    </div>   
+
+    <div id="milestoneTwoResults"></div>
+    <div id="pagination"></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="M2.js"></script>
 </body>
 </html>
